Prices per storage unit
