# swagger_server/models/day_offer_vector_euro_m_var.py
@@ -10,91 +10,63 @@ from swagger_server.models.day_offer_vector import DayOfferVector  # noqa: F401,
 from swagger_server import util
 
 
-class FlexOfferQLMPsItem(Model):
+class DayOfferVectorEuroMVar(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, storage_unit: str=None, values: DayOfferVector=None, price_unit: str=None, volume_unit: str=None):  # noqa: E501
-        """FlexOfferQLMPsItem - a model defined in Swagger
+    def __init__(self, values: DayOfferVector=None, price_unit: str=None, volume_unit: str=None):  # noqa: E501
+        """DayOfferVectorEuroMVar - a model defined in Swagger
 
-        :param storage_unit: The storage_unit of this FlexOfferQLMPsItem.  # noqa: E501
-        :type storage_unit: str
-        :param values: The values of this FlexOfferQLMPsItem.  # noqa: E501
+        :param values: The values of this DayOfferVectorEuroMVar.  # noqa: E501
         :type values: DayOfferVector
-        :param price_unit: The price_unit of this FlexOfferQLMPsItem.  # noqa: E501
+        :param price_unit: The price_unit of this DayOfferVectorEuroMVar.  # noqa: E501
         :type price_unit: str
-        :param volume_unit: The volume_unit of this FlexOfferQLMPsItem.  # noqa: E501
+        :param volume_unit: The volume_unit of this DayOfferVectorEuroMVar.  # noqa: E501
         :type volume_unit: str
         """
         self.swagger_types = {
-            'storage_unit': str,
             'values': DayOfferVector,
             'price_unit': str,
             'volume_unit': str
         }
 
         self.attribute_map = {
-            'storage_unit': 'storage_unit',
             'values': 'values',
             'price_unit': 'price_unit',
             'volume_unit': 'volume_unit'
         }
-        self._storage_unit = storage_unit
         self._values = values
         self._price_unit = price_unit
         self._volume_unit = volume_unit
 
     @classmethod
-    def from_dict(cls, dikt) -> 'FlexOfferQLMPsItem':
+    def from_dict(cls, dikt) -> 'DayOfferVectorEuroMVar':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The FlexOfferQLMPsItem of this FlexOfferQLMPsItem.  # noqa: E501
-        :rtype: FlexOfferQLMPsItem
+        :return: The DayOfferVectorEuroMVar of this DayOfferVectorEuroMVar.  # noqa: E501
+        :rtype: DayOfferVectorEuroMVar
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def storage_unit(self) -> str:
-        """Gets the storage_unit of this FlexOfferQLMPsItem.
-
-
-        :return: The storage_unit of this FlexOfferQLMPsItem.
-        :rtype: str
-        """
-        return self._storage_unit
-
-    @storage_unit.setter
-    def storage_unit(self, storage_unit: str):
-        """Sets the storage_unit of this FlexOfferQLMPsItem.
-
-
-        :param storage_unit: The storage_unit of this FlexOfferQLMPsItem.
-        :type storage_unit: str
-        """
-        if storage_unit is None:
-            raise ValueError("Invalid value for `storage_unit`, must not be `None`")  # noqa: E501
-
-        self._storage_unit = storage_unit
-
-    @property
     def values(self) -> DayOfferVector:
-        """Gets the values of this FlexOfferQLMPsItem.
+        """Gets the values of this DayOfferVectorEuroMVar.
 
 
-        :return: The values of this FlexOfferQLMPsItem.
+        :return: The values of this DayOfferVectorEuroMVar.
         :rtype: DayOfferVector
         """
         return self._values
 
     @values.setter
     def values(self, values: DayOfferVector):
-        """Sets the values of this FlexOfferQLMPsItem.
+        """Sets the values of this DayOfferVectorEuroMVar.
 
 
-        :param values: The values of this FlexOfferQLMPsItem.
+        :param values: The values of this DayOfferVectorEuroMVar.
         :type values: DayOfferVector
         """
         if values is None:
@@ -104,20 +76,20 @@ class FlexOfferQLMPsItem(Model):
 
     @property
     def price_unit(self) -> str:
-        """Gets the price_unit of this FlexOfferQLMPsItem.
+        """Gets the price_unit of this DayOfferVectorEuroMVar.
 
 
-        :return: The price_unit of this FlexOfferQLMPsItem.
+        :return: The price_unit of this DayOfferVectorEuroMVar.
         :rtype: str
         """
         return self._price_unit
 
     @price_unit.setter
     def price_unit(self, price_unit: str):
-        """Sets the price_unit of this FlexOfferQLMPsItem.
+        """Sets the price_unit of this DayOfferVectorEuroMVar.
 
 
-        :param price_unit: The price_unit of this FlexOfferQLMPsItem.
+        :param price_unit: The price_unit of this DayOfferVectorEuroMVar.
         :type price_unit: str
         """
         allowed_values = ["€/MVar"]  # noqa: E501
@@ -131,20 +103,20 @@ class FlexOfferQLMPsItem(Model):
 
     @property
     def volume_unit(self) -> str:
-        """Gets the volume_unit of this FlexOfferQLMPsItem.
+        """Gets the volume_unit of this DayOfferVectorEuroMVar.
 
 
-        :return: The volume_unit of this FlexOfferQLMPsItem.
+        :return: The volume_unit of this DayOfferVectorEuroMVar.
         :rtype: str
         """
         return self._volume_unit
 
     @volume_unit.setter
     def volume_unit(self, volume_unit: str):
-        """Sets the volume_unit of this FlexOfferQLMPsItem.
+        """Sets the volume_unit of this DayOfferVectorEuroMVar.
 
 
-        :param volume_unit: The volume_unit of this FlexOfferQLMPsItem.
+        :param volume_unit: The volume_unit of this DayOfferVectorEuroMVar.
         :type volume_unit: str
         """
         allowed_values = ["MVar"]  # noqa: E501
